--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
             Други качества, които притежавам са: добра комуникативност и работа в екип без конфликти, експедитивен съм и обичам точността, като спазвам сроковете си. Търся си работа в IT сектора.
             Sincerely,
-            Vladimir Ivov Dimitro
+            Vladimir Ivov Dimitrov
         </p>
     </div>
 </body>
